# Su-Share

./: CHANGELOG.md  README.md  README_en.md  README_zh.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: com_shellext.rs  commands.rs  http.rs  lib.rs  state.rs  utils.rs
src-tauri/web/: auth.html  bundle_multi.html  download.html  i18n.js  pickup.html  send.html
src-tauri/web/i18n/: build.py  en.js  ja.js  ko.js  zh-CN.js  zh-TW.js
src/css/: styles.css
src/js/: main.js  received.js  settings.js  share.js  theme.js  utils.js
src/js/i18n/: en.js  index.js  ja.js  ko.js  zh-CN.js  zh-TW.js
src/pages/: received.html  settings-appearance.html  settings-notification.html  settings-receive.html  settings-security.html  settings-software.html  settings.html  share.html
